--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
       # ---- . ---- ---- ---- ---- . ----
 
       - name: "CHECKOUT: `${{ github.repository }}`"
-        uses: actions/setup-node@latest
+        uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           repository: ${{ github.repository }}
@@ -39,7 +39,7 @@ jobs:
       # ---- . ---- ---- ---- ---- . ----
 
       - name: "NODE: install node"
-        uses: actions/setup-node@latest
+        uses: actions/setup-node@4
         with:
           node-version: latest
           registry-url: https://npm.pkg.github.com/
