--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,7 +34,7 @@ jobs:
       # ---- . ---- ---- ---- ---- . ----
 
       - name: "NODE: install node"
-        uses: actions/setup-node@4
+        uses: actions/setup-node@v4
         with:
           node-version: latest
           registry-url: https://npm.pkg.github.com/
