--- a/.github/workflows/rebase.yml
+++ b/.github/workflows/rebase.yml
@@ -81,5 +81,5 @@ jobs:
       # ---- . ---- ---- ---- ---- . ----
 
       # push changes:
-      - name: "REBASE: git push origin master"
-        run: git push -u https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/Patryk-B/get-root.git master
+      - name: "PUSH: git push origin master"
+        run: git push https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/Patryk-B/get-root.git master
