--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -79,7 +79,7 @@ jobs:
 
       # Publish:
       - name: "PUBLISH: npm publish"
-        run: npm publish
+        run: npm publish --access public
 
       # ---- . ---- ---- ---- ---- . ----
       # TAG:
