--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -73,7 +73,7 @@ jobs:
       - name: "PUBLISH: npm run test"
         run: npm run test
 
-      # Login via ~/.npmrc:
+      # Login to npm via ~/.npmrc:
       - name: "PUBLISH: echo 'token' > ~/.npmrc"
         run: echo '//npm.pkg.github.com/patryk-b/:_authToken=${{ secrets.GITHUB_TOKEN }}' > ~/.npmrc
 
