fixing publish action

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -79,7 +79,7 @@ jobs:
 
       # Publish:
       - name: "PUBLISH: npm publish"
-        run: npm publish --access public
+        run: npm publish --scope="@patryk-b" --registry="https://registry.npmjs.org" --access="public"
 
       # ---- . ---- ---- ---- ---- . ----
       # TAG:
