--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -75,7 +75,7 @@ jobs:
 
       # Login to npm via ~/.npmrc:
       - name: "PUBLISH: echo 'token' > ~/.npmrc"
-        run: echo '//registry.npmjs.org/patryk-b/:_authToken=${{ secrets.NPM_TOKEN }}' > ~/.npmrc
+        run: npm set "//npm.pkg.github.com/:_authToken=${{ secrets.NPM_TOKEN }}"
 
       # Publish:
       - name: "PUBLISH: npm publish"
